Section two Image's Gaps Fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -447,9 +447,16 @@ nav a {
   margin-bottom: 35px;
 }
 
-.s2-hero-img1-m, .s2-hero-img2-m,
+.s2-hero-img1-m{
+  margin-top: 5px;
+}
+
+.s2-hero-img2-m,
 .s2-hero-img3-m {
-  margin-top: 8px;
+  width: 100%;
+  height: 550px;
+  object-fit: cover;
+  margin-top: 14px;
 }
 
 }
